Mon Oct 29 07:57:31 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (str_extend): shuould allow interpolation of $-x.

Sat Oct 27 23:01:19 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (rb_big_eq): convert Bignum to Float, instead of
	  reverse.

Fri Oct 26 06:19:29 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* time.c (time_localtime): getting tm should not be prohibited for
	  frozen time objects.

	* time.c (time_gmtime): ditto.

	* version.c (Init_version): freeze RUBY_VERSION,
	  RUBY_RELEASE_DATE, and RUBY_PLATFORM.

	* file.c (Init_File): freeze File::SEPARATOR, ALT_SEPARATOR and
	  PATH_SEPARATOR.

	* file.c (rb_stat_cmp): should check operand type before calling
	  get_stat().

Thu Oct 25 10:28:15 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_eval_cmd): should not invoke "call" with a block on
	  any occasion.

Wed Oct 24 03:25:31 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (fix_aref): idx may be a Bignum.

Mon Oct 22 18:53:55 2001  Masahiro Tanaka  <masa@stars.gsfc.nasa.gov>

	* numeric.c (num_remainder): a bug in Numeric#remainder.

Mon Oct 22 15:21:55 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_exec_end_proc): END might be called within END
	  block.

Fri Oct 19 23:40:37 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* variable.c (remove_trace): should not access already freed area.

	* variable.c (rb_f_untrace_var): fix memory leak.

Tue Oct 16 21:38:15 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* eval.c (rb_f_missing): check stack level with rb_stack_check().

	* eval.c (rb_call0): ditto.

	* eval.c, intern.h (rb_stack_check): added. [new]

Tue Oct 16 00:07:06 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* parse.y (yylex): disallow alpha-numeric and mbchar for
	  terminator of %string.

Mond Oct 15 18:00:05 2001  Pit Capitain  <pit@capitain.de>

	* string.c (rb_str_index): wrong increment for non alphanumeric
	  string.
